--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -10,6 +10,10 @@ spring:
 
   datasource:
     url: jdbc:h2:mem:testdb
+    username: sa
   h2:
     console:
       enabled: true
+jwt:
+  issuer: hshhan0221@naver.com
+  secret_key: study-springboot
