--- a/build.gradle
+++ b/build.gradle
@@ -31,6 +31,9 @@ dependencies {
     testImplementation 'org.projectlombok:lombok'
     implementation 'io.jsonwebtoken:jjwt:0.9.1' // 자바 JWT 라이브러리
     implementation 'javax.xml.bind:jaxb-api:2.3.1'
+
+    // OAuth2
+    implementation 'org.springframework.boot:spring-boot-starter-oauth2-client'
 }
 
 test {
